# fractal-wednesday

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  run.sh  shell.nix
bare-metal-fractal/: Cargo.toml  build-size.sh  build-speed.sh  build.sh  debug.sh
bare-metal-fractal/src/: lib.rs
bare-metal-fractal/www/: bare_metal_fractal.wasm  index.html
bare-metal-wasm/: Cargo.toml  build.sh
bare-metal-wasm/src/: lib.rs
bare-metal-wasm/www/: bare_metal_wasm.wasm  index.html
bindgen-fractal/: Cargo.toml  build.sh  debug.sh  default.nix
bindgen-fractal/src/: lib.rs  render.rs  ui.rs  viewport.rs
bindgen-fractal/www/: bindgen_fractal.js  bindgen_fractal_bg.wasm  index.html
cpu-shader-roundtrip/: gl.js  index.html
fractal-rs/: Cargo.toml  README.md
fractal-rs/src/: main.rs
nix/: default.nix  sources.json
