[package]
name = "bindgen-fractal"
version = "0.1.0"
authors = ["Vincent Khougaz <vincent@khougaz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.5"
wasm-bindgen = "0.2.55"
[dependencies.web-sys]
version = "0.3.32"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
]